# SimpleRAG

./: .gitignore  README.md  chunking.py  create_synthetic_test_data.ipynb  embeddings.py  evaluation.py  helper.py  preprocessing_to_index.ipynb  preprocessing_to_index_old.ipynb  pyproject.toml  query.ipynb  query.py  test.py
backend/: pyproject.toml
chunks/: Assisting_customers_with_VoIP_setup._0.txt  Assisting_with_cloud_service_access._0.txt  Assisting_with_landline_troubleshooting._0.txt  Assisting_with_landline_troubleshooting._1.txt  Assisting_with_multi-room_TV_setup._0.txt  Assisting_with_online_gaming_connectivity_issues._0.txt  Assisting_with_router_firmware_updates._0.txt  Assisting_with_service_reactivation._0.txt  Configuring_network_devices_for_optimal_performance._0.txt  Diagnosing_and_fixing_no_internet_connection._0.txt  Diagnosing_and_resolving_network_dropouts._0.txt  Diagnosis_steps_for_intermittent_disconnections._0.txt  Explaining_bundled_services._0.txt  Explaining_call_forwarding_options._0.txt  Explaining_data_overage_charges._0.txt  Explaining_differences_between_upload_and_download_speeds._0.txt  Explaining_equipment_rental_fees._0.txt  Explaining_interconnectivity_issues._0.txt  Explaining_latency_in_video_conferencing._0.txt  Explaining_monthly_usage_reports._0.txt  Explaining_pay-per-view_charges._0.txt  Explaining_pay-per-view_charges._1.txt  Explaining_the_benefits_of_network_monitoring._0.txt  Guidelines_for_extending_Wi-Fi_range._0.txt  Guidelines_for_extending_Wi-Fi_range._1.txt  Guidelines_for_initiating_service_transfers._0.txt  (+51 more)
(+957 files in other folders)
